<resources>
    <string name="app_name">WallTime</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="u00a9_all_rights_reserved">© All Rights Reserved</string>
    <string name="download">Download</string>
    <string name="set_it">Set It</string>
    <string name="uploaded_by">Uploaded By :</string>
    <string name="tags">TAGS</string>
    <string name="wallpaper">wallpaper</string>
    <string name="set_as_wallpaper">SET AS WALLPAPER</string>
    <string name="collection_cover">collection cover</string>

    <string-array name="nav_item_activity_titles">
        <item>Automation</item>
        <item>Photo of the day</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="error_image">Error Image</string>
    <string name="its_a_bit_lonely_here">Its a bit lonely here</string>
    <string name="there_might_be_some_problem_with_internet_connection">There might be some problem with internet connection</string>
    <string name="title_activity_automation">AutomationActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_my_downloads">My Downloads</string>
    <string name="don_t_be_sad_bro">Don\'t be sad bro</string>
    <string name="go_back_and_download_images">Go back and download images!</string>
    <string name="widget_image">widget image</string>
    <string name="navigation_drawer_big_image">Navigation Drawer Big Image</string>
    <string name="account_image">Account Image</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_photo_of_the_day">PhotoOfTheDay</string>
    <string name="today_image">today image</string>
    <string name="single_photo">single photo</string>
    <string name="heart_icon">heart icon</string>

    <string name="wifi_pref_key" translatable="false">wifi</string>
    <string name="wifi_pref_title">Automation Over Wifi Only</string>
    <string name="wifi_summary_on">Enabled</string>
    <string name="wifi_summary_off">Not Enabled</string>
    <string name="charging_pref_key" translatable="false">charging</string>
    <string name="charging_pref_title">Automation When Charging</string>
    <string name="charging_summary_on">Enabled</string>
    <string name="charging_summary_off">Not Enabled</string>
    <string name="title_activity_download_detail">DownloadDetailActivity</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_share">Share</string>
    <string name="choose_category">Choose Category</string>
    <string name="choose_duration">Choose Duration</string>
    <string name="total_photos">Total Photos :</string>
    <string name="stop_current_automation">STOP CURRENT AUTOMATION</string>

    <string name="slow_message_toast">Slow Internet Connection…May take while</string>
    <string name="permission_message">To get storage access you have to allow us access to your sd card content.</string>
    <string name="storage">Storage</string>
    <string name="ok">OK</string>
    <string name="dwnld_image">Image Already Downloaded</string>
    <string name="set_image">Error While Image Setting</string>
    <string name="sign_in">Sign In</string>
    <string name="logged_out">Logged Out Successfully</string>
    <string name="collection">Collections</string>
    <string name="daily_new">Daily New</string>
    <string name="popular">Popular</string>

    <string name="hour">Hour</string>
    <string name="minutes">Minutes</string>

    <string name="add_automation">Add Automation</string>
    <string name="done">Done</string>
    <string name="data_not_fetched">Data Not Fetched…</string>
    <string name="cancel">Cancel</string>

    <string name="no_files">No Files</string>
    <string name="folder_not_created">Folder Not Created</string>

    <string name="no_wall_del">No wallpaper to delete :(</string>
    <string name="yes_wall_del">All wallpaper deleted :)</string>

    <string name="action_del_msg">This action will delete all your downloaded wallpaper</string>
    <string name="del">Delete</string>
    <string name="query_wrong">Query inappropriate</string>
    <string name="try_diff">Try different search..its the same</string>
    <string name="dwnld_wait">Downloading Image. Please wait…</string>
    <string name="dwnld_cancel">Download Cancelled</string>
    <string name="dwnld_error">Download error..</string>
    <string name="dwnld_success">File downloaded</string>
    <string name="title_activity_log">LogActivity</string>
    <string name="no_log_for_you_chill">No Log for you Chill…</string>

    <string name="dwnld">Downloaded : </string>
    <string name="no_wallpaper_saved">No Wallpaper Saved :(</string>
    <string name="automation">Automation</string>
    <string name="photo_of_the_day">Photo of the day</string>
    <string name="logs">Logs</string>
    <string name="my_downloads">My Downloads</string>
    <string name="other">Other</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>

    <string name="description">Created by Ashish Yadav.\nIts a wallpaper automation app which automatically downloads and sets the wallpaper.This FREE App provides Unique &amp; Supreme collection of Images for your screen.You can Enjoy our Awesome Contents with Simple UI and Great performance.Daily updates of Wallpapers selected by unsplash users. Guarantee the most stunning Wallpapers you\'ve ever seen.</string>
    <string name="version">"Version 1.5"</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="email">ay3524@gmail.com</string>
    <string name="instagram">ashishyadav271</string>
    <string name="git">ay3524</string>
    <string name="facebook">ay3524</string>
    <string name="package_name">ay3524.com.wallpapertime</string>
    <string name="maybe_you_should_try_a_different_query">Maybe you should try a different Query..</string>
    <string name="imageWidth_1920">1920</string>
    <string name="imageWidth_1080">1080</string>
    <string name="setting_wall_for_you">Setting the wallpaper for you :)</string>
    <string name="successfully_set">Successfully set as wallpaper :)</string>
    <string name="enter_time">Enter Time</string>

</resources>
