<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:alpha="0.5"
        android:background="#AA000000"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/collection_cover"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_rounded_corner_for_wall"
        android:orientation="horizontal"
        android:padding="5dip">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:alpha="0.5"
            android:textColor="#000"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="15dp"
        android:background="#AA000000"
        android:orientation="horizontal"
        android:textColor="#ffffffff"
        android:textSize="18sp">

        <Button
            android:id="@+id/dwnld"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:text="@string/download"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/set_as_wallpaper"
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:text="@string/set_it"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>
