<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:alpha="0.5"
        android:background="@color/transparent_color"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/collection_cover"/>

    <LinearLayout
        android:layout_marginTop="@dimen/margin_top_photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_left_photo_text"
        android:layout_marginLeft="@dimen/margin_left_photo_text"
        android:layout_marginBottom="@dimen/margin_bottom_photo_text"
        android:layout_marginRight="@dimen/margin_right_photo_text"
        android:layout_marginEnd="@dimen/margin_right_photo_text"
        android:background="@drawable/bg_rounded_corner_for_wall"
        android:orientation="horizontal"
        android:padding="@dimen/linear_padding">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/photo_text_margin_left"
            android:layout_marginStart="@dimen/photo_text_margin_left"
            android:layout_marginRight="@dimen/photo_text_margin_right"
            android:layout_marginEnd="@dimen/photo_text_margin_right"
            android:alpha="0.5"
            android:textColor="#000"
            android:textSize="@dimen/photo_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/collection_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/linear_margin"
        android:background="@color/transparent_color"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dwnld"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:text="@string/download"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/set_as_wallpaper"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/button_margin"
            android:layout_weight="1"
            android:background="@drawable/item_selector"
            android:text="@string/set_it"
            android:textColor="@android:color/white" />
    </LinearLayout>
</FrameLayout>
